[package]
name = "log-opentelemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
opentelemetry = {git = "https://github.com/open-telemetry/opentelemetry-rust", branch = "main", features = ["logs", "trace"]}
opentelemetry-semantic-conventions = {git = "https://github.com/open-telemetry/opentelemetry-rust", branch = "main"}
lazy_static = "1"
sval = { version = "2.1", optional = true }
hex = { version = "0.4", optional = true }
take_mut = { version = "0.2", optional = true }


[features]
default = []
kv_unstable = ["log/kv_unstable", "log/kv_unstable_sval", "log/std", "sval/std", "hex", "take_mut"]
